res/examples/invalid/unexpected_input.eg
@foo

// out: SyntaxError: unexpected input: "@foo"